--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build --build"
   },
   "keywords": [],
   "author": "",
@@ -20,17 +20,14 @@
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "html-webpack-plugin": "^5.5.0",
     "merge-stream": "^2.0.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
-    "webpack": "^5.72.1",
+    "gulp-hash-references": "^3.0.1",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "air-datepicker": "^3.1.1",
-    "gulp-hash-references": "^3.0.1",
-    "gulp-rev-collector": "^1.3.3",
     "tiny-slider": "^2.9.4"
   }
 }
