--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --build"
+    "build": "gulp build --build",
+    "makeSprite": "gulp makeSvgSprite"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +16,18 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-hash": "^4.2.2",
+    "gulp-hash-references": "^3.0.1",
+    "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^1.5.0",
     "merge-stream": "^2.0.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.0",
-    "gulp-hash-references": "^3.0.1",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
